--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -30,9 +30,11 @@ table, td, th {
     border: 1px solid black;
 }
 
-.response-table{
+.response-table {
     text-align: center;
     border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .color-box{
@@ -122,8 +124,9 @@ table, td, th {
         var progress_bar_container;
         var day_just_finished = 0;
         var popup_options ={
-                'minWidth': 124,
-                'maxHeight': 320,
+                'minWidth': 126,
+                'maxWidth': 126,
+                'maxHeight': 330,
                 'closeButton': false
                 };
 
@@ -144,27 +147,44 @@ table, td, th {
             return score == 2 ? 'Mosquito tigre' : (score == 1 ? 'Posible mosquito tigre' : (score == -1 ? 'Posible otra especie' : (score == -2 ? 'Otra especie' : 'No se sabe')));
         }
 
-        function make_color_div(score){
+        function make_color_row(score){
             if(score != null){
-            return '<div class="color-box ' + get_color_class(score) + '">' + get_cat_text(score) + '</div>';
+            return '<tr><td><div class="color-box ' + get_color_class(score) + '">' + get_cat_text(score) + '</div></td></tr>';
             } else{
                 return '';
             }
         }
 
-        function make_user_response_table(score, responses){
+        function make_user_response_row(score, responses){
             if(score != null){
-            return '<table class="response-table color-box ' + get_color_class(score) + '"><tr><td>' + rc2s(responses.q1_response) + '</td><td>' + rc2s(responses.q2_response) + '</td><td>' + rc2s(responses.q3_response) + '</td></tr></table>';
+            return '<tr><td><table class="response-table color-box ' + get_color_class(score) + '"><tr><td>' + rc2s(responses.q1_response) + '</td><td>' + rc2s(responses.q2_response) + '</td><td>' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
             }else{
+                return '';
+            }
+        }
+
+      function make_photo_row(photo_html){
+            if(photo_html != null){
+            return '<tr><td align="center" style="background-color: black;">' + photo_html + '</td></tr>';
+            }else{
+                return '';
+            }
+        }
+
+
+        function make_user_note_row(notes){
+            if(value != null){
+            return '<tr><td><div class="note-div">' + notes + '</div></td></tr>';
+            } else{
                 return '';
             }
         }
 
         function make_popup_text(value){
         if(value.movelab_annotation != null){
-        return '<table><tr><td> ' + make_color_div(value.movelab_annotation.tiger_certainty_category) + '</td><tr><td>' + make_color_div(value.movelab_annotation.crowdcrafting_score_cat) + '</td></tr><tr><td>' + make_user_response_table(value.tigaprob_cat, value.tiger_responses) + '</td></tr><tr><td align="center" style="background-color: black;">' + value.movelab_annotation.photo_html + '</td></tr><tr><td><div class="note-div">' + value.movelab_annotation.edited_user_notes + '</div></td></tr></table>';
+        return '<table>' + make_color_row(value.movelab_annotation.tiger_certainty_category) + make_color_row(value.movelab_annotation.crowdcrafting_score_cat) + make_user_response_row(value.tigaprob_cat, value.tiger_responses) + make_photo_row(value.movelab_annotation.photo_html) + make_user_note_row(value.movelab_annotation.edited_user_notes) + '</table>';
         } else{
-            return make_user_response_div(value.tigaprob_cat, value.tiger_responses);
+            return '<table>' + make_user_response_row + (value.tigaprob_cat, value.tiger_responses) + '</table>';
         }
         }
 
