--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -173,7 +173,7 @@ table, td, th {
 
 
         function make_user_note_row(notes){
-            if(value != null){
+            if(notes != null){
             return '<tr><td><div class="note-div">' + notes + '</div></td></tr>';
             } else{
                 return '';
