--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -157,7 +157,7 @@ table, td, th {
 
         function make_user_response_row(score, responses){
             if(score != null){
-            return '<tr><td><table class="response-table color-box ' + get_color_class(score) + '"><tr><td>' + rc2s(responses.q1_response) + '</td><td>' + rc2s(responses.q2_response) + '</td><td>' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
+            return '<tr><td><table class="response-table color-box ' + get_color_class(score) + '"><tr class="response-table"><td class="response-table">' + rc2s(responses.q1_response) + '</td><td class="response-table">' + rc2s(responses.q2_response) + '</td><td class="response-table">' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
             }else{
                 return '';
             }
