--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -21,7 +21,7 @@ body{
 
 .popup-table table {
     border-collapse: collapse;
-    font-size:small !important;
+    font-size:smaller !important;
     table-layout: fixed;
     width: 182px;
 }
@@ -36,6 +36,7 @@ body{
     padding-top: 10px !important;
     padding-bottom: 10px !important;
     width: 100% !important;
+    font-size: xx-small;
 }
 
 .color-box{
@@ -44,6 +45,7 @@ body{
     vertical-align: middle;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-size: smaller;
 }
 
 
@@ -67,7 +69,7 @@ body{
 }
 
 .note-div{
-    font-size:small;
+    font-size:smaller;
     padding:5px;
     font-family: "Courier New", Courier, monospace;
 }
@@ -313,7 +315,7 @@ body{
 
         function make_user_response_row(score, responses){
             if(score != null){
-            return '<tr><td class="color box ' + get_color_class(score) + '">"Tiger Answers":</td></tr><tr><td class="color box ' + get_color_class(score) + '"><table class="response-table color-box ' + get_color_class(score) + '"><tr class="response-table"><td class="response-table" style="border-right: 1px solid !important;">' + rc2s(responses.q1_response) + '</td><td class="response-table" style="border-right: 1px solid !important;">' + rc2s(responses.q2_response) + '</td><td class="response-table">' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
+            return '<tr><td><div class="color box ' + get_color_class(score) + '">Report:</div></td></tr><tr><td class="color box ' + get_color_class(score) + '"><table class="response-table color-box ' + get_color_class(score) + '"><tr class="response-table"><td class="response-table" style="border-right: 1px solid !important;">Small, black, white stripes? ' + rc2s(responses.q1_response) + '</td><td class="response-table" style="border-right: 1px solid !important;">White stripe on head and thorax? ' + rc2s(responses.q2_response) + '</td><td class="response-table">White stripes on abdomen and legs? ' + rc2s(responses.q3_response) + '</td></tr></table></td></tr>';
             }else{
                 return '';
             }
